...
                        .foregroundColor(.primary)
                        .padding(14)
                        .clipShape(Circle())
                        .contentShape(Circle())
                }
                .buttonStyle(PlainButtonStyle())
                .accessibilityIdentifier("settingsButton")

            } else {
                Button(action: { showRatingPopup = true }) {
                    Image(systemName: "star.bubble.fill")
                        .resizable()
                        .frame(width: 30, height: 30)
...
